AÑADIDO: correo, pagina principal, siria, ingles, proyecto 50, en vivo, sirena, empleo, contacto, inscripcion pregrado

--- a/www/templates/Menu.html
+++ b/www/templates/Menu.html
@@ -6,6 +6,7 @@
   <ion-nav-bar class="bar-positive"></ion-nav-bar><!--bar-dark oscuro -->
 
   <ion-content class="background-color"> <!--color del fondo, mirar css -->
+
     <!--LABEL INTERACTIVA -->
     <div class="card"> 
       <div class="item item-text-wrap">
@@ -22,6 +23,22 @@
       </div>
     </div>
 
+    <!--LABEL CORREO-->
+    <div class="card"> 
+      <div class="item item-text-wrap">
+        <a class= "link" href="https://login.microsoftonline.com/">
+        Correo
+      </div>
+    </div>
+
+     <!--LABEL PAGINA PRINCIPAL -->
+    <div class="card"> 
+      <div class="item item-text-wrap">
+        <a class= "link" href="http://www.eafit.edu.co/Paginas/index.aspx"> 
+        Pagina principal
+      </div>
+    </div>
+
     <!--LABEL BIBLIOTECA -->
     <div class="card">
       <div class="item item-text-wrap">
@@ -29,6 +46,72 @@
         SINBAD (Biblioteca)
       </div>
     </div>
+
+        <!--LABEL SIRIA -->
+    <div class="card">
+      <div class="item item-text-wrap">
+        <a class= "link" href="http://webapps.eafit.edu.co/siria/">
+        Siria(Reservar espacios)
+      </div>
+    </div>
+
+          <!--LABEL INGLES -->
+    <div class="card">
+      <div class="item item-text-wrap">
+        <a class= "link" href="http://www.eafit.edu.co/idiomas/Paginas/inicio.aspx">
+        Centro de idiomas
+      </div>
+    </div>
+
+    <!--LABEL PROYECTO 50-->
+    <div class="card">
+      <div class="item item-text-wrap">
+        <a class= "link" href="http://www.eafit.edu.co/proyecto50/Paginas/inicio.aspx">
+        Proyecto 50
+      </div>
+    </div>
+
+   <!--LABEL EN VIVO -->
+    <div class="card">
+      <div class="item item-text-wrap">
+        <a class= "link" href="http://envivo.eafit.edu.co/EnvivoEafit/">
+        Canal en Vivo
+      </div>
+    </div>
+
+
+        <!--LABEL SIRENA -->
+    <div class="card">
+      <div class="item item-text-wrap">
+        <a class= "link" href="https://app.eafit.edu.co/sirena/">
+        Sirena (Gestion Academica profesores)
+      </div>
+    </div>
+
+        <!--LABEL OFERTAS DE EMPLEO -->
+    <div class="card">
+      <div class="item item-text-wrap">
+        <a class= "link" href="http://www.elempleo.com/sitios-empresariales/colombia/se_eafit/oferta_sitio.asp">
+        Ofertas de empleo
+      </div>
+    </div>
+
+      <!--LABEL CONTACTO -->
+    <div class="card">
+      <div class="item item-text-wrap">
+        <a class= "link" href="http://www.eafit.edu.co/institucional/contacto/Paginas/contacto-eafit.aspx">
+        Contacto(Enviar Comentarios a la universidad)
+      </div>
+    </div>
+
+    <!--LABEL INSCRIPCION PREGRADO -->
+    <div class="card">
+      <div class="item item-text-wrap">
+        <a class= "link" href="https://app.eafit.edu.co/inscripciones">
+        Inscripciones Pregrado
+      </div>
+    </div>
+
 
   </ion-content>
 </ion-view>
