AÑADIDO: se añadio la publicidad(funciona al 50% se activa al abrir el programa), sa cambio la forma como se ve el template main, ahora se ve por listas con fotos

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -21,3 +21,18 @@
 h2{
 	color: white;
 }
+
+.item-thumbnail-left{
+  padding-top: -30px;
+  padding-left: 180px;
+  min-height: 20px;
+  height: 90%;
+}
+
+img{
+  padding-bottom: 10px;
+}
+
+.list{
+  margin-bottom: 5px;
+}
