--- a/www/templates/Menu.html
+++ b/www/templates/Menu.html
@@ -1,13 +1,11 @@
-<ion-view>
-<!--nav bar es la barra azul de arriba-->
+<<ion-view>
  <ion-nav-title>
       <!--<img src="logo.svg">-->
     </ion-nav-title>
   <ion-nav-bar class="bar-positive"></ion-nav-bar><!--bar-dark oscuro -->
 
-  <ion-content class="background-color"> <!--color del fondo, mirar css -->
+<ion-content class="background-color"> <!--color del fondo, mirar css 
 
-    <!--LABEL INTERACTIVA -->
     <div class="card"> 
       <div class="item item-text-wrap">
         <a class= "link" href="http://interactiva.eafit.edu.co/ei/"> 
@@ -15,7 +13,6 @@
       </div>
     </div>
 
-    <!--LABEL ULISES-->
     <div class="card"> 
       <div class="item item-text-wrap">
         <a class= "link" href="https://app.eafit.edu.co/ulises/login.do">
@@ -23,7 +20,6 @@
       </div>
     </div>
 
-    <!--LABEL CORREO-->
     <div class="card"> 
       <div class="item item-text-wrap">
         <a class= "link" href="https://login.microsoftonline.com/">
@@ -31,7 +27,6 @@
       </div>
     </div>
 
-     <!--LABEL PAGINA PRINCIPAL -->
     <div class="card"> 
       <div class="item item-text-wrap">
         <a class= "link" href="http://www.eafit.edu.co/Paginas/index.aspx"> 
@@ -39,7 +34,6 @@
       </div>
     </div>
 
-    <!--LABEL BIBLIOTECA -->
     <div class="card">
       <div class="item item-text-wrap">
         <a class= "link" href="http://bdigital.eafit.edu.co:8080/sinbad/">
@@ -47,15 +41,6 @@
       </div>
     </div>
 
-        <!--LABEL SIRIA -->
-    <div class="card">
-      <div class="item item-text-wrap">
-        <a class= "link" href="http://webapps.eafit.edu.co/siria/">
-        Siria(Reservar espacios)
-      </div>
-    </div>
-
-          <!--LABEL INGLES -->
     <div class="card">
       <div class="item item-text-wrap">
         <a class= "link" href="http://www.eafit.edu.co/idiomas/Paginas/inicio.aspx">
@@ -63,7 +48,7 @@
       </div>
     </div>
 
-    <!--LABEL PROYECTO 50-->
+    
     <div class="card">
       <div class="item item-text-wrap">
         <a class= "link" href="http://www.eafit.edu.co/proyecto50/Paginas/inicio.aspx">
@@ -71,7 +56,7 @@
       </div>
     </div>
 
-   <!--LABEL EN VIVO -->
+   
     <div class="card">
       <div class="item item-text-wrap">
         <a class= "link" href="http://envivo.eafit.edu.co/EnvivoEafit/">
@@ -80,7 +65,7 @@
     </div>
 
 
-        <!--LABEL SIRENA -->
+       
     <div class="card">
       <div class="item item-text-wrap">
         <a class= "link" href="https://app.eafit.edu.co/sirena/">
@@ -88,7 +73,7 @@
       </div>
     </div>
 
-        <!--LABEL OFERTAS DE EMPLEO -->
+        
     <div class="card">
       <div class="item item-text-wrap">
         <a class= "link" href="http://www.elempleo.com/sitios-empresariales/colombia/se_eafit/oferta_sitio.asp">
@@ -96,7 +81,7 @@
       </div>
     </div>
 
-      <!--LABEL CONTACTO -->
+      
     <div class="card">
       <div class="item item-text-wrap">
         <a class= "link" href="http://www.eafit.edu.co/institucional/contacto/Paginas/contacto-eafit.aspx">
@@ -104,14 +89,113 @@
       </div>
     </div>
 
-    <!--LABEL INSCRIPCION PREGRADO -->
+    
     <div class="card">
       <div class="item item-text-wrap">
         <a class= "link" href="https://app.eafit.edu.co/inscripciones">
         Inscripciones Pregrado
       </div>
-    </div>
+    </div>-->
+<div class="list">
 
+    <a class="item item-thumbnail-left" href="http://interactiva.eafit.edu.co/ei/">
+      <img src="http://soniarodriguezblog.com/wp-content/uploads/2015/05/avatar.jpeg">
+      <h3>Interactiva</h3>
+      <p>lorem epsilum </p>
+    </a>
+</div>
+
+<div class="list">
+
+    <a class="item item-thumbnail-left" href="https://app.eafit.edu.co/ulises/login.do">
+      <img src="http://soniarodriguezblog.com/wp-content/uploads/2015/05/avatar.jpeg">
+      <h3>Ulises</h3>
+      <p>lorem epsilum </p>
+    </a>
+</div>
+<div class="list">
+
+    <a class="item item-thumbnail-left" href="https://login.microsoftonline.com/">
+      <img src="http://soniarodriguezblog.com/wp-content/uploads/2015/05/avatar.jpeg">
+      <h3>Correo</h3>
+      <p>lorem epsilum </p>
+    </a>
+</div>
+<div class="list">
+
+    <a class="item item-thumbnail-left" href="http://bdigital.eafit.edu.co:8080/sinbad/">
+      <img src="http://soniarodriguezblog.com/wp-content/uploads/2015/05/avatar.jpeg">
+      <h3>SINBAD</h3>
+      <p>lorem epsilum </p>
+    </a>
+</div>
+
+<div class="list">
+    <a class="item item-thumbnail-left" href="http://www.eafit.edu.co/idiomas/Paginas/inicio.aspx">
+      <img src="http://soniarodriguezblog.com/wp-content/uploads/2015/05/avatar.jpeg">
+      <h3>Centro de idiomas</h3>
+      <p>lorem epsilum </p>
+    </a>
+</div>
+
+
+<div class="list">
+    <a class="item item-thumbnail-left" href="http://www.eafit.edu.co/Paginas/index.aspx">
+      <img src="http://soniarodriguezblog.com/wp-content/uploads/2015/05/avatar.jpeg">
+      <h3>Pagina principal</h3>
+      <p>lorem epsilum </p>
+    </a>
+</div>
+
+<div class="list">
+    <a class="item item-thumbnail-left" href="http://www.eafit.edu.co/proyecto50/Paginas/inicio.aspx">
+      <img src="http://soniarodriguezblog.com/wp-content/uploads/2015/05/avatar.jpeg">
+      <h3>Proyecto 50</h3>
+      <p>lorem epsilum </p>
+    </a>
+</div>
+
+<div class="list">
+    <a class="item item-thumbnail-left" href="http://envivo.eafit.edu.co/EnvivoEafit/">
+      <img src="http://soniarodriguezblog.com/wp-content/uploads/2015/05/avatar.jpeg">
+      <h3>Eafit En Vivo</h3>
+      <p>lorem epsilum </p>
+    </a>
+</div>
+
+<div class="list">
+    <a class="item item-thumbnail-left" href="https://app.eafit.edu.co/sirena/">
+      <img src="http://soniarodriguezblog.com/wp-content/uploads/2015/05/avatar.jpeg">
+      <h3>Sirena</h3>
+      <p>lorem epsilum </p>
+    </a>
+</div>
+
+<div class="list">
+    <a class="item item-thumbnail-left" href="http://www.elempleo.com/sitios-empresariales/colombia/se_eafit/oferta_sitio.asp">
+      <img src="http://soniarodriguezblog.com/wp-content/uploads/2015/05/avatar.jpeg">
+      <h3>Ofertas de empleo</h3>
+      <p>lorem epsilum </p>
+    </a>
+</div>
+
+<div class="list">
+    <a class="item item-thumbnail-left" href="http://www.eafit.edu.co/institucional/contacto/Paginas/contacto-eafit.aspx">
+      <img src="http://soniarodriguezblog.com/wp-content/uploads/2015/05/avatar.jpeg">
+      <h3>Contacto eafit</h3>
+      <p>lorem epsilum </p>
+    </a>
+</div>
+
+<div class="list">
+    <a class="item item-thumbnail-left" href="https://app.eafit.edu.co/inscripciones">
+      <img src="http://soniarodriguezblog.com/wp-content/uploads/2015/05/avatar.jpeg">
+      <h3>Inscripciones Pregrado</h3>
+      <p>lorem epsilum </p>
+    </a>
+</div>
 
   </ion-content>
 </ion-view>
+
+
