AÑADIDO: se añadieron imagenes a el proyecto, se añadio el banner de publicidad tipo intersitial(banner grande de toda la pantalla) CORRECCIONES: se corrigio el bug de "sirena" donde no se abria el link

--- a/www/templates/Menu.html
+++ b/www/templates/Menu.html
@@ -98,8 +98,8 @@
     </div>-->
 <div class="list">
 
-    <a class="item item-thumbnail-left" href="http://interactiva.eafit.edu.co/ei/">
-      <img src="http://soniarodriguezblog.com/wp-content/uploads/2015/05/avatar.jpeg">
+    <a class="item item-thumbnail-left" href="#" ng-click="showInterstitialAd()"  onclick="window.open('http://interactiva.eafit.edu.co/ei/', '_system', 'location=yes'); return false;">
+      <img src="img\Interactiva.jpg">
       <h3>Interactiva</h3>
       <p>lorem epsilum </p>
     </a>
@@ -107,32 +107,32 @@
 
 <div class="list">
 
-    <a class="item item-thumbnail-left" href="https://app.eafit.edu.co/ulises/login.do">
-      <img src="http://soniarodriguezblog.com/wp-content/uploads/2015/05/avatar.jpeg">
+    <a class="item item-thumbnail-left" href="#" ng-click="showInterstitialAd()"  onclick="window.open('https://app.eafit.edu.co/ulises/login.do', '_system', 'location=yes'); return false;">
+      <img src="img\Ulises.jpg">
       <h3>Ulises</h3>
       <p>lorem epsilum </p>
     </a>
 </div>
 <div class="list">
 
-    <a class="item item-thumbnail-left" href="https://login.microsoftonline.com/">
-      <img src="http://soniarodriguezblog.com/wp-content/uploads/2015/05/avatar.jpeg">
+    <a class="item item-thumbnail-left" href="#" ng-click="showInterstitialAd()"  onclick="window.open('https://login.microsoftonline.com/', '_system', 'location=yes'); return false;">
+      <img src="img\Correo2.jpg">
       <h3>Correo</h3>
       <p>lorem epsilum </p>
     </a>
 </div>
 <div class="list">
 
-    <a class="item item-thumbnail-left" href="http://bdigital.eafit.edu.co:8080/sinbad/">
-      <img src="http://soniarodriguezblog.com/wp-content/uploads/2015/05/avatar.jpeg">
+    <a class="item item-thumbnail-left" href="#" ng-click="showInterstitialAd()"  onclick="window.open('http://bdigital.eafit.edu.co:8080/sinbad/', '_system', 'location=yes'); return false;">
+      <img src="img\sinbad.jpg">
       <h3>SINBAD</h3>
       <p>lorem epsilum </p>
     </a>
 </div>
 
 <div class="list">
-    <a class="item item-thumbnail-left" href="http://www.eafit.edu.co/idiomas/Paginas/inicio.aspx">
-      <img src="http://soniarodriguezblog.com/wp-content/uploads/2015/05/avatar.jpeg">
+    <a class="item item-thumbnail-left" href="#" ng-click="showInterstitialAd()"  onclick="window.open('http://www.eafit.edu.co/idiomas/Paginas/inicio.aspx', '_system', 'location=yes'); return false;">
+      <img src="img\Idiomas.jpg">
       <h3>Centro de idiomas</h3>
       <p>lorem epsilum </p>
     </a>
@@ -140,56 +140,56 @@
 
 
 <div class="list">
-    <a class="item item-thumbnail-left" href="http://www.eafit.edu.co/Paginas/index.aspx">
-      <img src="http://soniarodriguezblog.com/wp-content/uploads/2015/05/avatar.jpeg">
+    <a class="item item-thumbnail-left" href="#" ng-click="showInterstitialAd()"  onclick="window.open('http://www.eafit.edu.co/Paginas/index.aspx', '_system', 'location=yes'); return false;">
+      <img src="img\principal.jpg">
       <h3>Pagina principal</h3>
       <p>lorem epsilum </p>
     </a>
 </div>
 
 <div class="list">
-    <a class="item item-thumbnail-left" href="http://www.eafit.edu.co/proyecto50/Paginas/inicio.aspx">
-      <img src="http://soniarodriguezblog.com/wp-content/uploads/2015/05/avatar.jpeg">
+    <a class="item item-thumbnail-left" href="#" ng-click="showInterstitialAd()"  onclick="window.open('http://www.eafit.edu.co/proyecto50/Paginas/inicio.aspx', '_system', 'location=yes'); return false;">
+      <img src="img\Proyecto50.jpg">
       <h3>Proyecto 50</h3>
       <p>lorem epsilum </p>
     </a>
 </div>
 
 <div class="list">
-    <a class="item item-thumbnail-left" href="http://envivo.eafit.edu.co/EnvivoEafit/">
-      <img src="http://soniarodriguezblog.com/wp-content/uploads/2015/05/avatar.jpeg">
+    <a class="item item-thumbnail-left" href="#" ng-click="showInterstitialAd()"  onclick="window.open('http://envivo.eafit.edu.co/EnvivoEafit/', '_system', 'location=yes'); return false;">
+      <img src="img\Canal.jpg">
       <h3>Eafit En Vivo</h3>
       <p>lorem epsilum </p>
     </a>
 </div>
 
 <div class="list">
-    <a class="item item-thumbnail-left" href="https://app.eafit.edu.co/sirena/">
-      <img src="http://soniarodriguezblog.com/wp-content/uploads/2015/05/avatar.jpeg">
+    <a class="item item-thumbnail-left" href="#" ng-click="showInterstitialAd()" onclick="window.open('https://app.eafit.edu.co/sirena/', '_system', 'location=yes'); return false;">
+      <img src="img\Sirena.jpg">
       <h3>Sirena</h3>
       <p>lorem epsilum </p>
     </a>
 </div>
 
 <div class="list">
-    <a class="item item-thumbnail-left" href="http://www.elempleo.com/sitios-empresariales/colombia/se_eafit/oferta_sitio.asp">
-      <img src="http://soniarodriguezblog.com/wp-content/uploads/2015/05/avatar.jpeg">
+    <a class="item item-thumbnail-left" href="#" ng-click="showInterstitialAd()"  onclick="window.open('http://www.elempleo.com/sitios-empresariales/colombia/se_eafit/oferta_sitio.asp', '_system', 'location=yes'); return false;">
+      <img src="img\Trabajo.jpg">
       <h3>Ofertas de empleo</h3>
       <p>lorem epsilum </p>
     </a>
 </div>
 
 <div class="list">
-    <a class="item item-thumbnail-left" href="http://www.eafit.edu.co/institucional/contacto/Paginas/contacto-eafit.aspx">
-      <img src="http://soniarodriguezblog.com/wp-content/uploads/2015/05/avatar.jpeg">
+    <a class="item item-thumbnail-left" href="#" ng-click="showInterstitialAd()"  onclick="window.open('http://www.eafit.edu.co/institucional/contacto/Paginas/contacto-eafit.aspx', '_system', 'location=yes'); return false;">
+      <img src="img\Contacto.jpg">
       <h3>Contacto eafit</h3>
       <p>lorem epsilum </p>
     </a>
 </div>
 
 <div class="list">
-    <a class="item item-thumbnail-left" href="https://app.eafit.edu.co/inscripciones">
-      <img src="http://soniarodriguezblog.com/wp-content/uploads/2015/05/avatar.jpeg">
+    <a class="item item-thumbnail-left" href="#" ng-click="showInterstitialAd()"  onclick="window.open('https://app.eafit.edu.co/inscripciones', '_system', 'location=yes'); return false;">
+      <img src="img\Pregrados.jpg">
       <h3>Inscripciones Pregrado</h3>
       <p>lorem epsilum </p>
     </a>
