--- a/www/templates/Menu.html
+++ b/www/templates/Menu.html
@@ -97,8 +97,7 @@
       </div>
     </div>-->
 <div class="list">
-
-    <a class="item item-thumbnail-left" href="#" ng-click="showInterstitialAd()"  onclick="window.open('http://interactiva.eafit.edu.co/ei/', '_system', 'location=yes'); return false;">
+    <a class="item item-thumbnail-left" href="#" onclick="window.open('http://interactiva.eafit.edu.co/ei/', '_system', 'location=yes'); return false;" ng-click="showInterstitialAd()">
       <img src="img\Interactiva.jpg">
       <h3>Interactiva</h3>
       <p>lorem epsilum </p>
@@ -106,15 +105,14 @@
 </div>
 
 <div class="list">
-
-    <a class="item item-thumbnail-left" href="#" ng-click="showInterstitialAd()"  onclick="window.open('https://app.eafit.edu.co/ulises/login.do', '_system', 'location=yes'); return false;">
+    <a class="item item-thumbnail-left" href="#" onclick="window.open('https://app.eafit.edu.co/ulises/login.do', '_system', 'location=yes'); return false;" ng-click="showInterstitialAd()">
       <img src="img\Ulises.jpg">
       <h3>Ulises</h3>
       <p>lorem epsilum </p>
     </a>
 </div>
-<div class="list">
 
+<div class="list">
     <a class="item item-thumbnail-left" href="#" ng-click="showInterstitialAd()"  onclick="window.open('https://login.microsoftonline.com/', '_system', 'location=yes'); return false;">
       <img src="img\Correo2.jpg">
       <h3>Correo</h3>
@@ -122,7 +120,6 @@
     </a>
 </div>
 <div class="list">
-
     <a class="item item-thumbnail-left" href="#" ng-click="showInterstitialAd()"  onclick="window.open('http://bdigital.eafit.edu.co:8080/sinbad/', '_system', 'location=yes'); return false;">
       <img src="img\sinbad.jpg">
       <h3>SINBAD</h3>
