--- a/www/templates/Menu.html
+++ b/www/templates/Menu.html
@@ -4,100 +4,10 @@
     </ion-nav-title>
   <ion-nav-bar class="bar-positive"></ion-nav-bar><!--bar-dark oscuro -->
 
-<ion-content class="background-color"> <!--color del fondo, mirar css 
+<ion-content class="background-color"> <!--color del fondo, mirar css -->
 
-    <div class="card"> 
-      <div class="item item-text-wrap">
-        <a class= "link" href="http://interactiva.eafit.edu.co/ei/"> 
-        Interactiva
-      </div>
-    </div>
-
-    <div class="card"> 
-      <div class="item item-text-wrap">
-        <a class= "link" href="https://app.eafit.edu.co/ulises/login.do">
-        Ulises
-      </div>
-    </div>
-
-    <div class="card"> 
-      <div class="item item-text-wrap">
-        <a class= "link" href="https://login.microsoftonline.com/">
-        Correo
-      </div>
-    </div>
-
-    <div class="card"> 
-      <div class="item item-text-wrap">
-        <a class= "link" href="http://www.eafit.edu.co/Paginas/index.aspx"> 
-        Pagina principal
-      </div>
-    </div>
-
-    <div class="card">
-      <div class="item item-text-wrap">
-        <a class= "link" href="http://bdigital.eafit.edu.co:8080/sinbad/">
-        SINBAD (Biblioteca)
-      </div>
-    </div>
-
-    <div class="card">
-      <div class="item item-text-wrap">
-        <a class= "link" href="http://www.eafit.edu.co/idiomas/Paginas/inicio.aspx">
-        Centro de idiomas
-      </div>
-    </div>
-
-    
-    <div class="card">
-      <div class="item item-text-wrap">
-        <a class= "link" href="http://www.eafit.edu.co/proyecto50/Paginas/inicio.aspx">
-        Proyecto 50
-      </div>
-    </div>
-
-   
-    <div class="card">
-      <div class="item item-text-wrap">
-        <a class= "link" href="http://envivo.eafit.edu.co/EnvivoEafit/">
-        Canal en Vivo
-      </div>
-    </div>
-
-
-       
-    <div class="card">
-      <div class="item item-text-wrap">
-        <a class= "link" href="https://app.eafit.edu.co/sirena/">
-        Sirena (Gestion Academica profesores)
-      </div>
-    </div>
-
-        
-    <div class="card">
-      <div class="item item-text-wrap">
-        <a class= "link" href="http://www.elempleo.com/sitios-empresariales/colombia/se_eafit/oferta_sitio.asp">
-        Ofertas de empleo
-      </div>
-    </div>
-
-      
-    <div class="card">
-      <div class="item item-text-wrap">
-        <a class= "link" href="http://www.eafit.edu.co/institucional/contacto/Paginas/contacto-eafit.aspx">
-        Contacto(Enviar Comentarios a la universidad)
-      </div>
-    </div>
-
-    
-    <div class="card">
-      <div class="item item-text-wrap">
-        <a class= "link" href="https://app.eafit.edu.co/inscripciones">
-        Inscripciones Pregrado
-      </div>
-    </div>-->
 <div class="list">
-    <a class="item item-thumbnail-left" href="#" onclick="window.open('http://interactiva.eafit.edu.co/ei/', '_system', 'location=yes'); return false;" ng-click="showInterstitialAd()">
+    <a class="item item-thumbnail-left" href="#" ng-click="showInterstitialSystemBrowser('1')">
       <img src="img\Interactiva.jpg">
       <h3>Interactiva</h3>
       <p>lorem epsilum </p>
@@ -105,7 +15,7 @@
 </div>
 
 <div class="list">
-    <a class="item item-thumbnail-left" href="#" onclick="window.open('https://app.eafit.edu.co/ulises/login.do', '_system', 'location=yes'); return false;" ng-click="showInterstitialAd()">
+    <a class="item item-thumbnail-left" href="#" ng-click="showInterstitialSystemBrowser('2')">
       <img src="img\Ulises.jpg">
       <h3>Ulises</h3>
       <p>lorem epsilum </p>
@@ -113,14 +23,14 @@
 </div>
 
 <div class="list">
-    <a class="item item-thumbnail-left" href="#" ng-click="showInterstitialAd()"  onclick="window.open('https://login.microsoftonline.com/', '_system', 'location=yes'); return false;">
+    <a class="item item-thumbnail-left" href="#" ng-click="showInterstitialSystemBrowser('3')">
       <img src="img\Correo2.jpg">
       <h3>Correo</h3>
       <p>lorem epsilum </p>
     </a>
 </div>
 <div class="list">
-    <a class="item item-thumbnail-left" href="#" ng-click="showInterstitialAd()"  onclick="window.open('http://bdigital.eafit.edu.co:8080/sinbad/', '_system', 'location=yes'); return false;">
+    <a class="item item-thumbnail-left" href="#" ng-click="showInterstitialSystemBrowser('4')">
       <img src="img\sinbad.jpg">
       <h3>SINBAD</h3>
       <p>lorem epsilum </p>
@@ -128,7 +38,7 @@
 </div>
 
 <div class="list">
-    <a class="item item-thumbnail-left" href="#" ng-click="showInterstitialAd()"  onclick="window.open('http://www.eafit.edu.co/idiomas/Paginas/inicio.aspx', '_system', 'location=yes'); return false;">
+    <a class="item item-thumbnail-left" href="#" ng-click="showInterstitialSystemBrowser('5')">
       <img src="img\Idiomas.jpg">
       <h3>Centro de idiomas</h3>
       <p>lorem epsilum </p>
@@ -137,7 +47,7 @@
 
 
 <div class="list">
-    <a class="item item-thumbnail-left" href="#" ng-click="showInterstitialAd()"  onclick="window.open('http://www.eafit.edu.co/Paginas/index.aspx', '_system', 'location=yes'); return false;">
+    <a class="item item-thumbnail-left" href="#" ng-click="showInterstitialSystemBrowser('6')">
       <img src="img\principal.jpg">
       <h3>Pagina principal</h3>
       <p>lorem epsilum </p>
@@ -145,7 +55,7 @@
 </div>
 
 <div class="list">
-    <a class="item item-thumbnail-left" href="#" ng-click="showInterstitialAd()"  onclick="window.open('http://www.eafit.edu.co/proyecto50/Paginas/inicio.aspx', '_system', 'location=yes'); return false;">
+    <a class="item item-thumbnail-left" href="#" ng-click="showInterstitialAd()"  onclick="window.open('http://www.eafit.edu.co/proyecto50/Paginas/inicio.aspx', '_blank', 'location=no'); return false;">
       <img src="img\Proyecto50.jpg">
       <h3>Proyecto 50</h3>
       <p>lorem epsilum </p>
@@ -153,7 +63,7 @@
 </div>
 
 <div class="list">
-    <a class="item item-thumbnail-left" href="#" ng-click="showInterstitialAd()"  onclick="window.open('http://envivo.eafit.edu.co/EnvivoEafit/', '_system', 'location=yes'); return false;">
+    <a class="item item-thumbnail-left" href="#" ng-click="showInterstitialAd()"  onclick="window.open('http://envivo.eafit.edu.co/EnvivoEafit/', '_blank', 'location=no'); return false;">
       <img src="img\Canal.jpg">
       <h3>Eafit En Vivo</h3>
       <p>lorem epsilum </p>
@@ -161,7 +71,7 @@
 </div>
 
 <div class="list">
-    <a class="item item-thumbnail-left" href="#" ng-click="showInterstitialAd()" onclick="window.open('https://app.eafit.edu.co/sirena/', '_system', 'location=yes'); return false;">
+    <a class="item item-thumbnail-left" href="#" ng-click="showInterstitialAd()" onclick="window.open('https://app.eafit.edu.co/sirena/', '_blank', 'location=no'); return false;">
       <img src="img\Sirena.jpg">
       <h3>Sirena</h3>
       <p>lorem epsilum </p>
@@ -169,7 +79,7 @@
 </div>
 
 <div class="list">
-    <a class="item item-thumbnail-left" href="#" ng-click="showInterstitialAd()"  onclick="window.open('http://www.elempleo.com/sitios-empresariales/colombia/se_eafit/oferta_sitio.asp', '_system', 'location=yes'); return false;">
+    <a class="item item-thumbnail-left" href="#" ng-click="showInterstitialAd()"  onclick="window.open('http://www.elempleo.com/sitios-empresariales/colombia/se_eafit/oferta_sitio.asp', '_blank', 'location=no'); return false;">
       <img src="img\Trabajo.jpg">
       <h3>Ofertas de empleo</h3>
       <p>lorem epsilum </p>
@@ -177,7 +87,7 @@
 </div>
 
 <div class="list">
-    <a class="item item-thumbnail-left" href="#" ng-click="showInterstitialAd()"  onclick="window.open('http://www.eafit.edu.co/institucional/contacto/Paginas/contacto-eafit.aspx', '_system', 'location=yes'); return false;">
+    <a class="item item-thumbnail-left" href="#" ng-click="showInterstitialAd()"  onclick="window.open('http://www.eafit.edu.co/institucional/contacto/Paginas/contacto-eafit.aspx', '_blank', 'location=no'); return false;">
       <img src="img\Contacto.jpg">
       <h3>Contacto eafit</h3>
       <p>lorem epsilum </p>
@@ -185,7 +95,7 @@
 </div>
 
 <div class="list">
-    <a class="item item-thumbnail-left" href="#" ng-click="showInterstitialAd()"  onclick="window.open('https://app.eafit.edu.co/inscripciones', '_system', 'location=yes'); return false;">
+    <a class="item item-thumbnail-left" href="#" ng-click="showInterstitialAd()"  onclick="window.open('https://app.eafit.edu.co/inscripciones', '_blank', 'location=no'); return false;">
       <img src="img\Pregrados.jpg">
       <h3>Inscripciones Pregrado</h3>
       <p>lorem epsilum </p>
