CORREGIDO: ahora todos los links abren el navegador dentro de la app

--- a/www/templates/Menu.html
+++ b/www/templates/Menu.html
@@ -7,7 +7,7 @@
 <ion-content class="background-color"> <!--color del fondo, mirar css -->
 
 <div class="list">
-    <a class="item item-thumbnail-left" href="#" ng-click="showInterstitialSystemBrowser('1')">
+    <a class="item item-thumbnail-left" href="#" ng-click="showInterstitialAd()"  onclick="window.open('http://interactiva.eafit.edu.co/ei/', '_blank', 'location=no'); return false;">
       <img src="img\Interactiva.jpg">
       <h3>Interactiva</h3>
       <p>lorem epsilum </p>
@@ -15,7 +15,7 @@
 </div>
 
 <div class="list">
-    <a class="item item-thumbnail-left" href="#" ng-click="showInterstitialSystemBrowser('2')">
+    <a class="item item-thumbnail-left" href="#" ng-click="showInterstitialAd()"  onclick="window.open('https://app.eafit.edu.co/ulises/login.do', '_blank', 'location=no'); return false;">
       <img src="img\Ulises.jpg">
       <h3>Ulises</h3>
       <p>lorem epsilum </p>
@@ -23,14 +23,14 @@
 </div>
 
 <div class="list">
-    <a class="item item-thumbnail-left" href="#" ng-click="showInterstitialSystemBrowser('3')">
+    <a class="item item-thumbnail-left" href="#" ng-click="showInterstitialAd()"  onclick="window.open('https://login.microsoftonline.com/', '_blank', 'location=no'); return false;">
       <img src="img\Correo2.jpg">
       <h3>Correo</h3>
       <p>lorem epsilum </p>
     </a>
 </div>
 <div class="list">
-    <a class="item item-thumbnail-left" href="#" ng-click="showInterstitialSystemBrowser('4')">
+    <a class="item item-thumbnail-left" href="#" ng-click="showInterstitialAd()"  onclick="window.open('http://bdigital.eafit.edu.co:8080/sinbad/', '_blank', 'location=no'); return false;">
       <img src="img\sinbad.jpg">
       <h3>SINBAD</h3>
       <p>lorem epsilum </p>
@@ -38,7 +38,7 @@
 </div>
 
 <div class="list">
-    <a class="item item-thumbnail-left" href="#" ng-click="showInterstitialSystemBrowser('5')">
+    <a class="item item-thumbnail-left" href="#" ng-click="showInterstitialAd()"  onclick="window.open('http://www.eafit.edu.co/idiomas/Paginas/inicio.aspx', '_blank', 'location=no'); return false;">
       <img src="img\Idiomas.jpg">
       <h3>Centro de idiomas</h3>
       <p>lorem epsilum </p>
@@ -47,7 +47,7 @@
 
 
 <div class="list">
-    <a class="item item-thumbnail-left" href="#" ng-click="showInterstitialSystemBrowser('6')">
+    <a class="item item-thumbnail-left" href="#" ng-click="showInterstitialAd()"  onclick="window.open('http://www.eafit.edu.co/Paginas/index.aspx', '_blank', 'location=no'); return false;">
       <img src="img\principal.jpg">
       <h3>Pagina principal</h3>
       <p>lorem epsilum </p>
